{
  "version": 4,
  "terraform_version": "1.14.8",
  "serial": 112,
  "lineage": "0fe565d3-3047-8ffb-0b1e-7655f9cfbf6d",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "bastion",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-002ba09fe59208472",
            "arn": "arn:aws:ec2:us-east-1:540799520398:elastic-ip/eipalloc-002ba09fe59208472",
            "association_id": "eipassoc-03941f77b8bcf899c",
            "domain": "vpc",
            "id": "eipalloc-002ba09fe59208472",
            "instance": "i-091903d448582c865",
            "network_border_group": "us-east-1",
            "network_interface": "eni-06e642ef3c25360a4",
            "private_dns": "ip-10-0-100-109.ec2.internal",
            "private_ip": "10.0.100.109",
            "public_dns": "ec2-3-208-105-12.compute-1.amazonaws.com",
            "public_ip": "3.208.105.12",
            "public_ipv4_pool": "amazon",
            "vpc": true
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_instance.bastion",
            "aws_key_pair.ameyaDB",
            "aws_security_group.db_nodes",
            "aws_subnet.public",
            "aws_vpc.geochron"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0dcd970b1e66f65a7",
            "arn": "arn:aws:ec2:us-east-1:540799520398:elastic-ip/eipalloc-0dcd970b1e66f65a7",
            "domain": "vpc",
            "id": "eipalloc-0dcd970b1e66f65a7",
            "network_border_group": "us-east-1",
            "public_dns": "ec2-18-234-193-41.compute-1.amazonaws.com",
            "public_ip": "18.234.193.41",
            "public_ipv4_pool": "amazon",
            "vpc": true
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "bastion",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0e10497160c48e829",
            "arn": "arn:aws:ec2:us-east-1:540799520398:instance/i-091903d448582c865",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-091903d448582c865",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "key_name": "ameyaDB-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-06e642ef3c25360a4",
            "private_dns": "ip-10-0-100-109.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.100.109",
            "public_dns": "ec2-44-213-134-222.compute-1.amazonaws.com",
            "public_ip": "44.213.134.222",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0a99ea3d8fb0ab6b5",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-07565a86e13c453b7",
            "tags": {
              "Name": "ameyaDB-bastion"
            },
            "tags_all": {
              "Name": "ameyaDB-bastion"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-005eb11f2a0bd286b"
            ]
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_key_pair.ameyaDB",
            "aws_security_group.db_nodes",
            "aws_subnet.public",
            "aws_vpc.geochron"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "db_node",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0e10497160c48e829",
            "arn": "arn:aws:ec2:us-east-1:540799520398:instance/i-052e86b8c38b52c70",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "ameyaDB-node-profile",
            "id": "i-052e86b8c38b52c70",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "key_name": "ameyaDB-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-091023146c572e5f9",
            "private_dns": "ip-10-0-0-118.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.0.118",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-006f986c067baf1c4",
                "volume_size": 20,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-041b9ce7897e7f9df",
            "tags": {
              "Name": "ameyaDB-node-0"
            },
            "tags_all": {
              "Name": "ameyaDB-node-0"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-005eb11f2a0bd286b"
            ]
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_iam_instance_profile.db_node",
            "aws_iam_role.db_node",
            "aws_key_pair.ameyaDB",
            "aws_security_group.db_nodes",
            "aws_subnet.private",
            "aws_vpc.geochron"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0e10497160c48e829",
            "arn": "arn:aws:ec2:us-east-1:540799520398:instance/i-098de87bf80309d51",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-1b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "ameyaDB-node-profile",
            "id": "i-098de87bf80309d51",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "key_name": "ameyaDB-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-070a0426dfcd8d301",
            "private_dns": "ip-10-0-1-40.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.40",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-08ae75f393dcf039f",
                "volume_size": 20,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0cbb6ab75b01f807c",
            "tags": {
              "Name": "ameyaDB-node-1"
            },
            "tags_all": {
              "Name": "ameyaDB-node-1"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-005eb11f2a0bd286b"
            ]
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_iam_instance_profile.db_node",
            "aws_iam_role.db_node",
            "aws_key_pair.ameyaDB",
            "aws_security_group.db_nodes",
            "aws_subnet.private",
            "aws_vpc.geochron"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0e10497160c48e829",
            "arn": "arn:aws:ec2:us-east-1:540799520398:instance/i-0c3eb42a18e2ae912",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-1c",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "ameyaDB-node-profile",
            "id": "i-0c3eb42a18e2ae912",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "key_name": "ameyaDB-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0c929b8fb3c03fb83",
            "private_dns": "ip-10-0-2-76.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.2.76",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0cf065b20cf7b74a1",
                "volume_size": 20,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-06b03dd83bd9fe6d5",
            "tags": {
              "Name": "ameyaDB-node-2"
            },
            "tags_all": {
              "Name": "ameyaDB-node-2"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-005eb11f2a0bd286b"
            ]
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_iam_instance_profile.db_node",
            "aws_iam_role.db_node",
            "aws_key_pair.ameyaDB",
            "aws_security_group.db_nodes",
            "aws_subnet.private",
            "aws_vpc.geochron"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "geochron",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:540799520398:internet-gateway/igw-056d9931d92b014eb",
            "id": "igw-056d9931d92b014eb",
            "owner_id": "540799520398",
            "tags": {
              "Name": "ameyaDB-igw"
            },
            "tags_all": {
              "Name": "ameyaDB-igw"
            },
            "vpc_id": "vpc-08c7f95445651a3af"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.geochron"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "internal",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:540799520398:loadbalancer/net/ameyaDB-internal-nlb/3274cc9ff0753dd2",
            "arn_suffix": "net/ameyaDB-internal-nlb/3274cc9ff0753dd2",
            "dns_name": "ameyaDB-internal-nlb-3274cc9ff0753dd2.elb.us-east-1.amazonaws.com",
            "dns_record_client_routing_policy": "any_availability_zone",
            "enable_cross_zone_load_balancing": false,
            "enable_deletion_protection": false,
            "enable_zonal_shift": false,
            "id": "arn:aws:elasticloadbalancing:us-east-1:540799520398:loadbalancer/net/ameyaDB-internal-nlb/3274cc9ff0753dd2",
            "internal": true,
            "ip_address_type": "ipv4",
            "load_balancer_type": "network",
            "name": "ameyaDB-internal-nlb",
            "subnet_mapping": [
              {
                "subnet_id": "subnet-041b9ce7897e7f9df"
              },
              {
                "subnet_id": "subnet-06b03dd83bd9fe6d5"
              },
              {
                "subnet_id": "subnet-0cbb6ab75b01f807c"
              }
            ],
            "subnets": [
              "subnet-041b9ce7897e7f9df",
              "subnet-06b03dd83bd9fe6d5",
              "subnet-0cbb6ab75b01f807c"
            ],
            "tags": {
              "Name": "ameyaDB-internal-nlb"
            },
            "tags_all": {
              "Name": "ameyaDB-internal-nlb"
            },
            "vpc_id": "vpc-08c7f95445651a3af",
            "zone_id": "Z26RNL4JYFTOTI"
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "geochron",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "status": "tainted",
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0dcd970b1e66f65a7",
            "connectivity_type": "public",
            "id": "nat-012955e816c4bda68",
            "subnet_id": "subnet-07565a86e13c453b7",
            "tags": {
              "Name": "ameyaDB-nat"
            },
            "tags_all": {
              "Name": "ameyaDB-nat"
            }
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.nat",
            "aws_subnet.public",
            "aws_vpc.geochron"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:540799520398:route-table/rtb-06f68d7aa5abb4c03",
            "id": "rtb-06f68d7aa5abb4c03",
            "owner_id": "540799520398",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-056d9931d92b014eb",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "ameyaDB-public-rt"
            },
            "tags_all": {
              "Name": "ameyaDB-public-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-08c7f95445651a3af"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.geochron",
            "aws_vpc.geochron"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-06535bf5e26ea8b87",
            "route_table_id": "rtb-06f68d7aa5abb4c03",
            "subnet_id": "subnet-07565a86e13c453b7"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.geochron",
            "aws_route_table.public",
            "aws_subnet.public",
            "aws_vpc.geochron"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "db_nodes",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:540799520398:security-group/sg-005eb11f2a0bd286b",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-005eb11f2a0bd286b",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "10.0.0.0/16"
                ],
                "description": "",
                "from_port": 8080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8080
              },
              {
                "cidr_blocks": [
                  "10.0.0.0/16"
                ],
                "description": "",
                "from_port": 8081,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8081
              }
            ],
            "name": "ameyaDB-nodes",
            "name_prefix": "",
            "owner_id": "540799520398",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "ameyaDB-nodes-sg"
            },
            "tags_all": {
              "Name": "ameyaDB-nodes-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-08c7f95445651a3af"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.geochron"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:540799520398:subnet/subnet-041b9ce7897e7f9df",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.0.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-041b9ce7897e7f9df",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "540799520398",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "ameyaDB-private-0"
            },
            "tags_all": {
              "Name": "ameyaDB-private-0"
            },
            "vpc_id": "vpc-08c7f95445651a3af"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.geochron"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:540799520398:subnet/subnet-0cbb6ab75b01f807c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0cbb6ab75b01f807c",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "540799520398",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "ameyaDB-private-1"
            },
            "tags_all": {
              "Name": "ameyaDB-private-1"
            },
            "vpc_id": "vpc-08c7f95445651a3af"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.geochron"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:540799520398:subnet/subnet-06b03dd83bd9fe6d5",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-06b03dd83bd9fe6d5",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "540799520398",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "ameyaDB-private-2"
            },
            "tags_all": {
              "Name": "ameyaDB-private-2"
            },
            "vpc_id": "vpc-08c7f95445651a3af"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.geochron"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:540799520398:subnet/subnet-07565a86e13c453b7",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.100.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-07565a86e13c453b7",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "540799520398",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "ameyaDB-public"
            },
            "tags_all": {
              "Name": "ameyaDB-public"
            },
            "vpc_id": "vpc-08c7f95445651a3af"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.geochron"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "geochron",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:540799520398:vpc/vpc-08c7f95445651a3af",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-041e132f35a32f4e9",
            "default_route_table_id": "rtb-0989554e93c4ecda6",
            "default_security_group_id": "sg-04a72a0db767737ff",
            "dhcp_options_id": "dopt-02fdf07e13cef04fb",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-08c7f95445651a3af",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0989554e93c4ecda6",
            "owner_id": "540799520398",
            "tags": {
              "Name": "ameyaDB-vpc"
            },
            "tags_all": {
              "Name": "ameyaDB-vpc"
            }
          },
          "identity_schema_version": 0
        }
      ]
    }
  ]
}